--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=":3000"
-DB_STRING="host= user= password= dbname= port=5432 sslmode=disable"
+#DB_STRING="host=postgresdb user=postgres password=root dbname=postgres port=5432"
+DB_STRING="host=localhost user=postgres password=root dbname=postgres port=5432 sslmode=disable"
 SECRET="12345"
